# Credit-Signal-Report-

./: .env.example  .gitignore  CREDIT_SIGNAL_REPORT_IMPLEMENTATION_PLAN.md  GST_PROVIDER_RESEARCH.md  MCA_PROVIDER_RESEARCH.md  PERFIOS_SETUP.md  README.md  _gen_answer_pdf.py  _gen_full_report_pdf.py  _gen_gst_pdf.py  _gen_pros_cons_rating_pdf.py  _gen_recommendation_pdf.py  my_4_reports.csv  my_4_reports.json  pyproject.toml
app/: config.py  database.py  deps.py  main.py
app/dao/: api_key_dao.py  buyer_dao.py  feature_snapshot_dao.py  gst_api_call_dao.py  gst_cache_dao.py  mca_api_call_dao.py  mca_cache_dao.py  order_dao.py  report_dao.py  supplier_dao.py
app/models/: __init__.py  api_key.py  buyer.py  feature_snapshot.py  gst_api_call.py  gst_cache.py  mca_api_call.py  mca_cache.py  order.py  report.py  supplier.py
app/routers/: buyers.py  features.py  gst.py  health.py  mca.py  orders.py  payment_import.py  reports.py
app/schemas/: buyer.py  feature.py  gst.py  mca.py  order.py  report.py
app/services/: buyer_service.py  feature_builder_service.py  gst_data_service.py  mca_data_service.py  order_service.py  payment_import_service.py  report_service.py  (+1 more)
bruno/: 01_health.bru  02_create_report.bru  03_get_report.bru  04_list_reports.bru  05_build_features.bru  06_list_features.bru  07_export_dataset.bru  08_mca_usage.bru  bruno.json
scripts/: export_dataset.py  export_reports.py  init_db.py  seed.py  test_gst_connection.py
sql/: 001_init.sql  002_payment_history.sql  003_gst_cache_and_calls.sql  004_mca_and_legal.sql  005_feature_snapshots_and_score.sql
(+16 files in other folders)
